deployment updates to docker

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "momentumDB": "Host=postgresTodo;Server=localhost:5432;Database=momentumDb;;User Id=postgres;Password=postgres"
+    "momentumDB": ""
   }
 }
