--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "momentumDB": "Host=postgresTodo;Server=localhost:5432;Database=momentumDb;;User Id=postgres;Password=postgres"
+    "momentumDB": ""
   },
   "AllowedHosts": "*"
 }
