MOMENTUM_API_SPN

--- a/.github/workflows/momentum-api1.yml
+++ b/.github/workflows/momentum-api1.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        creds: ${{ secrets.momentum_api_SPN }}
+        creds: ${{ secrets.MOMENTUM_API_SPN }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
