--- a/.github/workflows/momentum-api1.yml
+++ b/.github/workflows/momentum-api1.yml
@@ -34,6 +34,8 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
+    permissions:
+      id-token: write #This is required for requesting the JWT
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
