--- a/.github/workflows/momentum-api1.yml
+++ b/.github/workflows/momentum-api1.yml
@@ -35,7 +35,8 @@ jobs:
     runs-on: windows-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
+      contents: read
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
@@ -48,6 +49,7 @@ jobs:
         client-id: ${{ secrets.MOMENTUM_CLIENTID }}
         tenant-id: ${{ secrets.MOMENTUM_TENANTID }}
         subscription-id: ${{ secrets.MOMENTUM_SUBSCRIPTIONID }}
+        auth-type: ID_TOKEN
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
